Stirling_helm/stirling-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stirling-pdf
  namespace: stirling-pdf
  labels:
    app: stirling-pdf 
    env: home
spec:
  type: LoadBalancer
  selector:
    app: stirling-pdf
  ports:
  - port: 80
    name: http
    targetPort: 8080
