Stirling_helm/stirling-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stirling
  namespace: stirling-pdf
spec:
  parentRefs:
    - name: gw-internal
      namespace: gateway
      sectionName: web-gw
  hostnames:
    - stirling.huntrrose.local
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
      - name: stirling-pdf
        namespace: stirling-pdf
        port: 8080
